--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   </nav>
   </div>
   </header>
-  <div class="container"> I
+  <div class="container"> 
   <router-outlet></router-outlet>
   </div>
