--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,11 +11,7 @@
     <strong>You said: </strong> {{ name }}
     </p>
     </div>
-    <div class="play-container" [ngStyle]="{
-        'background-color': clickCounter > 4 ? 'red' : 'lightgray',
-        'border': clickCounter > 4 ? '4px solid black' : 'none'
-
-}">
+    <div class="play-container" [class.active]="clickCounter > 4">
         <ng-template [ngIf]="clickCounter > 4" [ngIfElse]="none">
         <p>The click counter <strong>IS GREATER</strong> than 4.</p>
         </ng-template>
